Fix - Button alignment issue

--- a/SCSS/theme/_theme-style.scss
+++ b/SCSS/theme/_theme-style.scss
@@ -385,7 +385,6 @@ input[type="reset"],
 input[type="button"],
 input[type="submit"],
 button {
-	margin-bottom: 30px;
 	padding: 10px 20px;
 	background-color: #289dcc;
 	border: 0px;
